# b4u_serving

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  upload_from_s3.py
.github/workflows/: ci.yaml
app/: main.py
db/: init_db.py  store_recs.py
tests/: test_main.py
utils/: loader.py
