[tool.poetry]
name = "b4u-serving"
version = "0.1.0"
description = ""
authors = ["Andrey Korotkiy <Andreikorotkiy@gmail.com>"]
readme = "README.md"
packages = [{include = "b4u_serving"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
