[tool.poetry]
name = "b4u-serving"
version = "0.1.0"
description = ""
authors = ["Andrey Korotkiy <Andreikorotkiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
